--- a/WebApi-Examples/DogApi/DogApi/DogApi.csproj
+++ b/WebApi-Examples/DogApi/DogApi/DogApi.csproj
@@ -176,12 +176,15 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ConstraintsController.cs" />
     <Compile Include="Controllers\DogsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\VerbsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Dog.cs" />
+    <Compile Include="Models\DogMediaFormatter.cs" />
     <Compile Include="Models\Owner.cs" />
     <Compile Include="Models\Toy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
