web api demo stuff

--- a/WebApi-Examples/DogApi/DogApi/DogApi.csproj
+++ b/WebApi-Examples/DogApi/DogApi/DogApi.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\DogsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\VerbsController.cs" />
+    <Compile Include="Filters\LoggingActionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
