--- a/WebApi-Examples/DogApi/DogApi/Web.config
+++ b/WebApi-Examples/DogApi/DogApi/Web.config
@@ -29,6 +29,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="4294967295"/>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
