--- a/WebApi-Examples/DogApi/OwinBasicAuth/OwinBasicAuth.csproj
+++ b/WebApi-Examples/DogApi/OwinBasicAuth/OwinBasicAuth.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\Microsoft.Owin.Hosting.3.1.0\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.3.1.0\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -84,6 +88,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicAuth\BasicAuthenticationHandler.cs" />
+    <Compile Include="BasicAuth\BasicAuthenticationMiddleware.cs" />
+    <Compile Include="BasicAuth\BasicAuthenticationMiddlewareExtensions.cs" />
+    <Compile Include="BasicAuth\BasicAuthenticationOptions.cs" />
     <Compile Include="DemoController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
