--- a/WebApi-Examples/DogApi/OwinBasicAuth/packages.config
+++ b/WebApi-Examples/DogApi/OwinBasicAuth/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Owin.Diagnostics" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
