made a demo for authentication and authorization filters

--- a/WebApi-Examples/DogApi/BasicAuthFilter/BasicAuthFilter.csproj
+++ b/WebApi-Examples/DogApi/BasicAuthFilter/BasicAuthFilter.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicAuthenticationFilter.cs" />
+    <Compile Include="CheckAuthorizationAttribute.cs" />
     <Compile Include="DemoController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
